Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
proton-c-0.22.0
-
None
-
RHEL 7 x86_64
Description
Python:
def on_session_init(self, event): event.transport._set_max_frame_size(VALUE)
I noticed that the receiver is not able to receive messages when the value for max-frame-size is larger than 2^20 (1048576) bytes (remote_max_frame_size is 4294967295). I'm not really sure if that is expected. This may be reproduced when adding the code above ie.: to simple_recv.py.
Note: This is not a good use case as setting the max-frame-size in on_session_init is really too late. But given that it is too late to set the max-frame-size, I would expect it won't have any effect on the client.
Ruby:
From https://github.com/rh-messaging/cli-proton-ruby cli-proton-ruby
cli-proton-ruby-receiver -b <broker> -c <msg_count> --log-msgs dict --conn-max-frame-size 1048577
Receiver is stuck.
Attachments
Issue Links
- relates to
-
PROTON-1523 [proton c] API unclear how incoming_capacity and max_frame work
- Closed
-
PROTON-636 remove confusing default for session capacity and allow disabling it
- Closed
1.
|
[c test] c-connection-driver-tests fail on windows | Closed | Unassigned |