PROTON-1809: Unable to receive messages when max-frame-size > 2^20

The C transport code was computing the session incoming window as
session_capacity/max_frame_size, resulting in an incoming window that was always
0 if the frame size was bigger than session_capacity (default 2^20)

Fixes:

1. Removed the default session-capacity. Session flow control is only enabled
   if session-capacity and max-frame-size are *both* explicitly set.

2. If the specified session capacity is less than max-frame-size, it is
   automatically increased to be equal to max-frame-size to ensure at least one
   frame can be received.